--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://user:Ds02Gj4nn8khgiEw@cluster0.o7soc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://marshawn:testing123@cluster0.p0jr0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
