My mongodb connected

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://marshawn:testing123@cluster0.p0jr0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://marshawn:testing123@cluster0.5vjco.mongodb.net/labelDB?retryWrites=true&w=majority
