--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 MONGODB_URI = mongodb+srv://marshawn:testing123@cluster0.5vjco.mongodb.net/labelDB?retryWrites=true&w=majority
+
+Sources:
+    Carousel
+    https://www.youtube.com/watch?v=0wvrlOyGlq0&list=PLHeQnIpIQOQslbYvQzXAJahBAyKPnOxNh&index=4&t=729s
+
+    Textover
+    https://www.youtube.com/watch?v=3U1jyTZuSnQ&list=PLHeQnIpIQOQslbYvQzXAJahBAyKPnOxNh&index=5
