--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ Sources:
 
     Textover
     https://www.youtube.com/watch?v=3U1jyTZuSnQ&list=PLHeQnIpIQOQslbYvQzXAJahBAyKPnOxNh&index=5
+
+    Share button
+    https://www.youtube.com/watch?v=uiBwb1MoRno
