--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ Sources:
 
     Share button
     https://www.youtube.com/watch?v=uiBwb1MoRno
+
+    Popup button
+    https://www.youtube.com/watch?v=iE_6pQ3RlZU
