--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "homepage": "http://off2mxrs.github.io/label",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
@@ -11,5 +14,8 @@
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.12",
     "rowdy-logger": "^1.0.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
