--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "homepage": "http://off2mxrs.github.io/label",
+  "main": "server,js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
